--- a/src/MLS.Api/appsettings.Development.json
+++ b/src/MLS.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "MatLidConnectionString": "Data Source=.;Initial Catalog=MLSDB;Integrated Security=True;Trust Server Certificate=True"
+    "MatLidConnectionString": "Data Source=.;Initial Catalog=MatLabDB;Integrated Security=True;Trust Server Certificate=True"
   }
 }
