Enhanced app functionality and structure
- Added DbSet properties for entities in MatLidStoreDatabaseContext.cs to represent tables in the database.
- Introduced IsProductUnique method in IProductRepository for product uniqueness check.
- Modified OrderDto and OrderDetailDto with additional properties for enhanced data transfer.
- Implemented CQRS pattern with commands and queries for orders and products management.
- Removed CreateAddressCommand and handler, indicating a shift in address management.
- Added FluentValidation for CreateOrderCommandValidator, CreateProductCommandValidator, and UpdateProductCommandValidator to ensure data integrity.
- Enhanced exception handling in command handlers with custom exceptions for better error reporting.
- Added AutoMapper profiles for efficient domain entities and DTOs mapping.
- Adjusted project structure in MLS.Application.csproj for better organization and feature management.

--- a/src/MSL.Application/MLS.Application.csproj
+++ b/src/MSL.Application/MLS.Application.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Features\Address\Commands\" />
     <Folder Include="Features\Address\Queries\" />
     <Folder Include="Features\Article\Commands\" />
     <Folder Include="Features\Article\Queries\" />
@@ -31,8 +32,6 @@
     <Folder Include="Features\Notification\Queries\" />
     <Folder Include="Features\OrderDetail\Commands\" />
     <Folder Include="Features\OrderDetail\Queries\" />
-    <Folder Include="Features\Order\Commands\" />
-    <Folder Include="Features\Order\Queries\" />
     <Folder Include="Features\Payment\Commands\" />
     <Folder Include="Features\Payment\Queries\" />
     <Folder Include="Features\ProductColor\Commands\" />
