Refactor and enhance DTOs for clarity
Significant refactoring across DTOs to simplify property names, enhance object relationships, and introduce new properties for improved functionality. Renamed and restructured DTOs for better alignment with their purpose and to adhere to naming conventions. Adjusted namespaces and using directives for better project organization. Added collections to represent one-to-many relationships more effectively and introduced new folders to accommodate new features and reorganize existing ones. Improved date handling and entity identification for increased clarity and consistency across the application.

--- a/src/MSL.Application/MLS.Application.csproj
+++ b/src/MSL.Application/MLS.Application.csproj
@@ -28,6 +28,12 @@
     <Folder Include="Features\Comment\Queries\" />
     <Folder Include="Features\Discount\Commands\" />
     <Folder Include="Features\Discount\Queries\" />
+    <Folder Include="Features\Address\" />
+    <Folder Include="Features\Category\" />
+    <Folder Include="Features\WishList\" />
+    <Folder Include="Features\User\" />
+    <Folder Include="Features\Supplier\" />
+    <Folder Include="Features\Payment\" />
     <Folder Include="Features\Notification\Commands\" />
     <Folder Include="Features\Notification\Queries\" />
     <Folder Include="Features\OrderDetail\Commands\" />
