Enhanced app config and functionality
- Introduced `Layout` property in `MatLidStoreDatabaseContext.dgml` for layout configurations.
- Updated `Program.cs` with new `using` directives and service registration methods.
- Modified `launchSettings.json` by replacing "IIS Express" profile with "http" profile and adjustments.
- Updated `appsettings.Development.json` with new connection string and email settings.
- Enhanced entity models with precise data type annotations for financial properties.
- Added `EmailSender` class implementing `IEmailSender` for email functionality using SendGrid.
- Updated `InfrastructureServiceRegistration.cs` to configure email settings and register `EmailSender`.
- Added package references in `MLS.Infrastructure.csproj` for configuration and SendGrid.
- Improved `MatLidStoreDatabaseContext.cs` with new constructor and model configurations for entity relationships.
- Removed and regenerated `20240115125052_InitialMigration.Designer.cs` for database model changes.
- Added `20240621153122_InitialMigration.cs` migration file outlining a comprehensive database schema overhaul.
- Reflected domain model evolution in `MatLidStoreDatabaseContextModelSnapshot.cs` with user-centric changes and new functionalities.
- Introduced `IEmailSender` interface and added logging to command and query handlers for articles.
- Added `EmailMessage` and `EmailSetting` models for email functionality.

--- a/src/MLS.Api/appsettings.Development.json
+++ b/src/MLS.Api/appsettings.Development.json
@@ -6,6 +6,11 @@
     }
   },
   "ConnectionStrings": {
-    "MatLidConnectionString": "Data Source=.;Initial Catalog=MatLidStoreDB;Integrated Security=True;Trust Server Certificate=True"
+    "MatLidConnectionString": "Data Source=.;Initial Catalog=MatLidStoreDB;Integrated Security=True;Trust Server Certificate=True;MultipleActiveResultSets=true"
+  },
+  "EmailSetting": {
+    "ApiKey": "SendGrid-Key",
+    "FromAddress": "no-reply@matlidstore.com",
+    "FromName": "Admin MatLidStore"
   }
 }
