feat: Add footer, header, and pagination components
This commit adds the footer, header, and pagination components to the theme module in the MLS.WebUI application. These components have been implemented with basic HTML templates and placeholder content. They enhance the overall layout and navigation of the application.

--- a/src/MLS.WebUI/.prettierrc
+++ b/src/MLS.WebUI/.prettierrc
@@ -1,5 +1,8 @@
 {
   "printWidth": 120,
   "tabWidth": 2,
-  "singleQuote": true
+  "singleQuote": true,
+  "editorconfig": true,
+  "semi": true,
+  "trailingComma": "es5"
 }
