Switch EF Core provider from SQL Server to Oracle
Updated .gitignore to include appsettings.Development.json.
Removed appsettings.Development.json file.
Added DesignTimeDbContextFactory for Oracle.
Removed #pragma directives in MatLidStoreDatabaseContext.
Updated MLS.Persistence.csproj with new package references.
Modified InitialCreate migration for Oracle compatibility.
Updated MatLidStoreDatabaseContextModelSnapshot for Oracle.
Changed AddPersistenceServices to use Oracle provider.

--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,4 @@ FodyWeavers.xsd
 /src/MLS.Api/MatLidStoreDatabaseContext.dgml
 /src/MLS.Api/MatLidStoreDatabaseContext.dgml
 /src/MLS.Api/appsettings.Development.json
+/src/MLS.Api/appsettings.Development.json
