Refactor identity and entity relationships
- Updated `MLS.Api.csproj` to include `Microsoft.IdentityModel.Tokens` package.
- Refactored `Program.cs` to streamline identity setup and Swagger security definition.
- Replaced `User` with `AppUser` across multiple entities and added `MaxLength` attributes.
- Added new `AppRole` and `AppUserRole` classes for role management.
- Introduced `AuthenticationService` and `UserService` for JWT and user management.
- Enhanced `MatLidStoreDatabaseContext` with table prefixes and updated relationships.
- Added `IdentityServiceRegistration` for configuring identity services.
- Updated `MLS.Persistence.csproj` to include JWT Bearer authentication package.
- Cleaned up and reorganized various repository and DTO classes to use `AppUser`.

--- a/src/MLS.Persistence/MLS.Persistence.csproj
+++ b/src/MLS.Persistence/MLS.Persistence.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -17,14 +17,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.32">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.32" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
     <PackageReference Include="Oracle.EntityFrameworkCore" Version="6.21.150" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.32" />
   </ItemGroup>
 
 </Project>
