Update project dependencies, configs, and UI components
- Added `System.Formats.Asn1` package to `MLS.Api.csproj` and `MLS.Persistence.csproj`.
- Enhanced Swagger security definition in `Program.cs`.
- Cleaned up JWT-related commented-out code in `Program.cs`.
- Updated application URLs in `launchSettings.json`.
- Added `appsettings.Development.json` with logging and connection string.
- Reordered using directives in multiple files.
- Improved comments in `EntityConfigurations.cs` and `MatLidStoreDatabaseContext.cs`.
- Refactored `AddDbContext` method in `IdentityServiceRegistration.cs`.
- Removed unnecessary using directive in `20240803070055_InitialMigrationDatabase.cs`.
- Updated `launch.json` to use `pwa-edge`.
- Reformatted `plugins` array in `karma.conf.js`.
- Adjusted padding in `home.component.html`.
- Overhauled `footer.component.html` with a detailed footer structure.
- Replaced placeholder content in `header.component.html` and `login-layout.component.html` with detailed structures.
- Added new methods to various repository interfaces.

--- a/src/MLS.Persistence/MLS.Persistence.csproj
+++ b/src/MLS.Persistence/MLS.Persistence.csproj
@@ -25,6 +25,7 @@
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
     <PackageReference Include="Oracle.EntityFrameworkCore" Version="6.21.150" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.32" />
+    <PackageReference Include="System.Formats.Asn1" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
