--- a/src/MLS.WebUI/angular.json
+++ b/src/MLS.WebUI/angular.json
@@ -67,7 +67,10 @@
               "browserTarget": "MLS.WebUI:build:production"
             },
             "development": {
-              "browserTarget": "MLS.WebUI:build:development"
+              "browserTarget": "MLS.WebUI:build:development",
+              "ssl": true,
+              "sslKey": "src/app/core/ssl/matlidstore.key",
+              "sslCert": "src/app/core/ssl/matlidstore.crt"
             }
           },
           "defaultConfiguration": "development"
