--- a/src/MLS.Api/appsettings.json
+++ b/src/MLS.Api/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "TokenKey": "This is a notice about the hard to guess security key by MatLid Store"
 }
