Refactor auth, update configs, and improve CORS setup
- Removed [AllowAnonymous] from MatLidStoreBaseController.
- Refactored CORS policy configuration in Program.cs.
- Updated connection string in appsettings.Development.json.
- Corrected punctuation in TokenKey in appsettings.json.
- Moved ITokenService to MLS.Persistence.Auth namespace.
- Refactored TokenService for clarity and error handling.
- Stopped registering ITokenService in AddInfrastructureServices.
- Updated AddIdentityServices for JWT and TokenService registration.
- Updated migration timestamp in 20240823065027_InitialMigration.
- Renamed ITokenService method from CreateToken to GenerateJwtToken.
- Updated GetUserDetailsByUserNameQueryHandler to use GenerateJwtToken.

--- a/src/MLS.Api/appsettings.json
+++ b/src/MLS.Api/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "TokenKey": "This is a notice about the hard to guess security key by MatLid Store"
+  "TokenKey": "This is a notice about the hard to guess security key by MatLid Store."
 }
