Refactor and reformat code for improved readability
Updated `appsettings.Development.json` to change the `MatLidConnectionString` database name. Adjusted `.prettierrc` `printWidth` to 200. Reformatted `angular.json` arrays for compactness.

Refactored `MLSApiService` in `mls-data.service.ts`:
- Removed `process` methods.
- Simplified error handling.
- Added/modified methods for direct HTTP response handling.
- Re-added `fromJS`, `init`, and `toJSON` methods in DTOs.
- Minor formatting adjustments.

Removed unnecessary spaces in class declarations, import statements, and method definitions across multiple files. Improved HTML formatting in `footer.component.html` and `header.component.html`.

Reformatted HTML and JSON structures for better readability in various files. Corrected mapping configuration for `RegisterModel` to `AppUser` to use `MapFrom` for lowercase conversion.

--- a/src/MLS.Api/appsettings.Development.json
+++ b/src/MLS.Api/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MatLidConnectionString": "Data Source=localhost:1521/matlidstoredb.dev;User Id=system;Password=Matliddev2024@"
+    "MatLidConnectionString": "Data Source=localhost:1521/matlidstore.dev;User Id=system;Password=Matliddev2024@"
   }
 }
