--- a/src/MLS.WebUI/.prettierrc
+++ b/src/MLS.WebUI/.prettierrc
@@ -2,7 +2,7 @@
   "printWidth": 200,
   "tabWidth": 2,
   "singleQuote": true,
-  "editorconfig": true,
   "semi": true,
-  "trailingComma": "es5"
+  "trailingComma": "es5",
+  "endOfLine": "auto"
 }
