--- a/src/MLS.WebUI/.prettierrc
+++ b/src/MLS.WebUI/.prettierrc
@@ -1,8 +1,10 @@
 {
   "printWidth": 200,
   "tabWidth": 2,
-  "singleQuote": true,
   "semi": true,
+  "singleQuote": true,
   "trailingComma": "es5",
+  "bracketSpacing": true,
+  "arrowParens": "always",
   "endOfLine": "auto"
 }
