Refactor async run, routing, and login form handling
Updated Program.cs to use async app.RunAsync() for better performance.
Modified angular.json to set port and update SSL paths.
Refined routing in app-admin-routing.module.ts and app-routing.module.ts.
Enhanced login form handling and validation in login-layout components.
Updated header links to use routerLink for navigation.
Improved styling and added new CSS classes in login-layout.component.scss.
Adjusted service injection and module imports for better organization.

--- a/src/MLS.WebUI/angular.json
+++ b/src/MLS.WebUI/angular.json
@@ -68,9 +68,10 @@
             },
             "development": {
               "browserTarget": "MLS.WebUI:build:development",
+              "port": 4200,
               "ssl": true,
-              "sslKey": "src/app/core/ssl/matlidstore.key",
-              "sslCert": "src/app/core/ssl/matlidstore.crt"
+              "sslKey": "./src/app/core/ssl/matlidstore.key",
+              "sslCert": "./src/app/core/ssl/matlidstore.crt"
             }
           },
           "defaultConfiguration": "development"
