--- a/src/MLS.WebUI/.vscode/launch.json
+++ b/src/MLS.WebUI/.vscode/launch.json
@@ -7,14 +7,16 @@
       "type": "chrome",
       "request": "launch",
       "preLaunchTask": "npm: start",
-      "url": "https://localhost:4200/"
+      "url": "https://localhost:4200",
+      "runtimeExecutable": "C:\\Program Files\\BraveSoftware\\Brave-Browser\\Application\\brave.exe" // Đường dẫn đến Brave trên Windows
     },
     {
       "name": "ng test",
       "type": "chrome",
       "request": "launch",
       "preLaunchTask": "npm: test",
-      "url": "https://localhost:9876/debug.html"
+      "url": "https://localhost:9876/debug.html",
+      "runtimeExecutable": "C:\\Program Files\\BraveSoftware\\Brave-Browser\\Application\\brave.exe" // Đường dẫn đến Brave trên Windows
     }
   ]
 }
