--- a/src/MLS.WebUI/.vscode/launch.json
+++ b/src/MLS.WebUI/.vscode/launch.json
@@ -4,19 +4,19 @@
   "configurations": [
     {
       "name": "ng serve",
-      "type": "chrome",
+      "type": "msedge",
       "request": "launch",
       "preLaunchTask": "npm: start",
       "url": "https://localhost:4200",
-      "runtimeExecutable": "C:\\Program Files\\BraveSoftware\\Brave-Browser\\Application\\brave.exe" // Đường dẫn đến Brave trên Windows
+      "runtimeExecutable": "C:\\Program Files (x86)\\Microsoft\\Edge Dev\\Application\\msedge.exe" // Đường dẫn đến Brave trên Windows
     },
     {
       "name": "ng test",
-      "type": "chrome",
+      "type": "msedge",
       "request": "launch",
       "preLaunchTask": "npm: test",
       "url": "https://localhost:9876/debug.html",
-      "runtimeExecutable": "C:\\Program Files\\BraveSoftware\\Brave-Browser\\Application\\brave.exe" // Đường dẫn đến Brave trên Windows
+      "runtimeExecutable": "C:\\Program Files (x86)\\Microsoft\\Edge Dev\\Application\\msedge.exe" // Đường dẫn đến Brave trên Windows
     }
   ]
 }
