--- a/src/MLS.WebUI/angular.json
+++ b/src/MLS.WebUI/angular.json
@@ -61,17 +61,18 @@
           "defaultConfiguration": "production"
         },
         "serve": {
+          "options": {
+            "ssl": true,
+            "sslKey": "./src/app/core/ssl/matlidstore-key.pem",
+            "sslCert": "./src/app/core/ssl/matlidstore.pem"
+          },
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
               "browserTarget": "MLS.WebUI:build:production"
             },
             "development": {
-              "browserTarget": "MLS.WebUI:build:development",
-              "port": 4200,
-              "ssl": true,
-              "sslKey": "./src/app/core/ssl/matlidstore.key",
-              "sslCert": "./src/app/core/ssl/matlidstore.crt"
+              "browserTarget": "MLS.WebUI:build:development"
             }
           },
           "defaultConfiguration": "development"
