Add logging, update solution structure, and config changes
- Updated `MatLidStore.sln` to change project type GUIDs, add solution folders, and nest projects.
- Added `StatusCodes.Status404NotFound` response type to `HttpPost` methods in `AddressController.cs` and `UserController.cs`.
- Changed `[Authorize]` to `[AllowAnonymous]` in `MatLidStoreBaseController.cs`.
- Set `launchBrowser` to `true` in `launchSettings.json`.
- Updated `appsettings.Development.json` with new `EmailSettings`.
- Added logging functionality to various command and query handlers using `IAppLogger<T>`.
- Implemented logging for validation errors, not found exceptions, and successful operations.

--- a/src/MLS.Api/appsettings.Development.json
+++ b/src/MLS.Api/appsettings.Development.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MatLidConnectionString": "Data Source=localhost:1521/matlidstore.dev;User Id=system;Password=Matliddev2024@"
+  },
+  "EmailSettings": {
+    "ApiKey": "SendGrid-Key",
+    "FromAddress": "phamtiendungcw@gmail.com",
+    "FromName": "Admin MatLidStore System"
   }
 }
