Add identity management system with JWT authentication
Introduced a new identity management system using ASP.NET Core Identity with Oracle as the database provider. Key changes include:

- Added `MLS.Identity` project to the solution and updated solution configuration.
- Created `AuthenticationController` in `MLS.Api` for login and registration endpoints.
- Updated `MLS.Api.csproj` to reference `MLS.Identity`.
- Configured identity services in `Program.cs`.
- Added JWT settings to `appsettings.Development.json`.
- Created configurations for roles and users in `MLS.Identity`.
- Added `MatLidStoreManagementIdentityDbContext` for identity-related DB operations.
- Implemented `IdentityServicesRegistration` for identity and JWT bearer token authentication.
- Added initial migration `20240904214426_InitialIdentityMigration` for identity schema.
- Added `ApplicationUser`, `AuthService`, and `UserService` for extended identity functionalities.
- Updated `IdentityServiceRegistration` to shift to the new identity system.
- Enhanced `mls-data.service.ts` with reorganization, new methods, and improved error handling.
- Added interfaces `IAuthService` and `IUserService` with respective methods.
- Added models for authentication requests/responses, user details, and JWT settings.
- Updated `BadRequestException` to ensure `ValidationErrors` is initialized.

--- a/src/MLS.Api/appsettings.Development.json
+++ b/src/MLS.Api/appsettings.Development.json
@@ -13,5 +13,11 @@
     "ApiKey": "SendGrid-Key",
     "FromAddress": "phamtiendungcw@gmail.com",
     "FromName": "Admin MatLidStore System"
+  },
+  "JwtSettings": {
+    "Key": "3kJhN+q1Y6w1JQwfjWf5sFZ2+LhB9X9OeDKLa5dqIMw=",
+    "Issuer": "MatLidStore management API",
+    "Audience": "MatLidStore management user",
+    "DurationInHours": 2
   }
 }
