Add Serilog, non-nullable types, and improve AuthService
- Added Serilog dependencies to `MLS.Api.csproj` for logging.
- Configured Serilog in `Program.cs` for console and file logging.
- Enabled request logging with `app.UseSerilogRequestLogging()`.
- Added `TokenKey` to `appsettings.Development.json`.
- Added Serilog config to `appsettings.json` for daily file logging.
- Updated various classes to use non-nullable reference types.
- Added `System.Security.Cryptography.Xml` to `MLS.Identity.csproj`.
- Reorganized and improved using directives in `AuthService.cs`.
- Enhanced exception message formatting in `AuthService.cs`.
- Added a new constructor to `NotFoundException.cs`.

--- a/src/MLS.Api/appsettings.Development.json
+++ b/src/MLS.Api/appsettings.Development.json
@@ -19,5 +19,6 @@
     "Issuer": "MatLidStore management API",
     "Audience": "MatLidStore management user",
     "DurationInHours": 2
-  }
+  },
+  "TokenKey": "This is a notice about the hard to guess security key by MatLidStore."
 }
