--- a/src/MLS.Api/appsettings.json
+++ b/src/MLS.Api/appsettings.json
@@ -6,5 +6,22 @@
     }
   },
   "AllowedHosts": "*",
-  "TokenKey": "This is a notice about the hard to guess security key by MatLidStore."
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./logs/log-.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
+  }
 }
