Refactor authentication and user management system
- Removed `MLS.Identity` project and related configurations from `MatLidStore.sln`.
- Simplified `RegisterUser` and updated `LoginUser` in `AccountController.cs`.
- Renamed `Login` to `Register` in `AuthenticationController.cs`.
- Removed `[AllowAnonymous]` from `GetAllUsers` in `UserController.cs`.
- Added `Microsoft.AspNetCore.Http` package and removed `MLS.Identity` reference in `MLS.Api.csproj`.
- Refactored service configuration and HTTP pipeline setup in `Program.cs`.
- Updated connection strings in `appsettings.Development.json`.
- Updated domain entities to use `User` instead of `AppUser`.
- Removed `RoleConfiguration.cs` and `UserRoleConfiguration.cs`.
- Updated `MatLidStoreManagementIdentityDbContext.cs` for new identity structure.
- Removed `IdentityServicesRegistration.cs`.
- Downgraded `Microsoft.AspNetCore.Identity` version in `MLS.Identity.csproj`.
- Removed initial identity migration files.
- Added new package references in `MLS.Persistence.csproj`.
- Updated `20240906001721_InitialMigration.Designer.cs` for new identity entities and seed data.
- Refactored `PersistenceServiceRegistration.cs` and added `AuthService`.
- Removed `IAuthenticationService`, `IUserService`, and `ITokenService` interfaces.
- Updated `RegisterModel` and `UserDtoValidator.cs` for new validations.
- Refactored command and query handlers for user registration and login.
- Removed feature-related folders and files from `MLS.Application.csproj`.
- Updated `AuthResponse`, `JwtSettings`, and `RegistrationResponse` classes.

--- a/src/MLS.Api/MLS.Api.csproj
+++ b/src/MLS.Api/MLS.Api.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.32" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.1.34" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.32">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -25,10 +26,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MLS.Identity\MLS.Identity.csproj" />
     <ProjectReference Include="..\MLS.Infrastructure\MLS.Infrastructure.csproj" />
     <ProjectReference Include="..\MLS.Persistence\MLS.Persistence.csproj" />
     <ProjectReference Include="..\MSL.Application\MLS.Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="logs\" />
   </ItemGroup>
 
 </Project>
