--- a/src/MSL.Application/MLS.Application.csproj
+++ b/src/MSL.Application/MLS.Application.csproj
@@ -7,6 +7,42 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Features\Address\**" />
+    <Compile Remove="Features\Discount\**" />
+    <Compile Remove="Features\Notification\**" />
+    <Compile Remove="Features\ProductColor\**" />
+    <Compile Remove="Features\ProductImage\**" />
+    <Compile Remove="Features\ProductOption\**" />
+    <Compile Remove="Features\ProductTag\**" />
+    <Compile Remove="Features\Supplier\**" />
+    <Compile Remove="Features\Supply\**" />
+    <Compile Remove="Features\Tag\**" />
+    <Compile Remove="Features\WishListItem\**" />
+    <EmbeddedResource Remove="Features\Address\**" />
+    <EmbeddedResource Remove="Features\Discount\**" />
+    <EmbeddedResource Remove="Features\Notification\**" />
+    <EmbeddedResource Remove="Features\ProductColor\**" />
+    <EmbeddedResource Remove="Features\ProductImage\**" />
+    <EmbeddedResource Remove="Features\ProductOption\**" />
+    <EmbeddedResource Remove="Features\ProductTag\**" />
+    <EmbeddedResource Remove="Features\Supplier\**" />
+    <EmbeddedResource Remove="Features\Supply\**" />
+    <EmbeddedResource Remove="Features\Tag\**" />
+    <EmbeddedResource Remove="Features\WishListItem\**" />
+    <None Remove="Features\Address\**" />
+    <None Remove="Features\Discount\**" />
+    <None Remove="Features\Notification\**" />
+    <None Remove="Features\ProductColor\**" />
+    <None Remove="Features\ProductImage\**" />
+    <None Remove="Features\ProductOption\**" />
+    <None Remove="Features\ProductTag\**" />
+    <None Remove="Features\Supplier\**" />
+    <None Remove="Features\Supply\**" />
+    <None Remove="Features\Tag\**" />
+    <None Remove="Features\WishListItem\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MLS.Domain\MLS.Domain.csproj" />
   </ItemGroup>
 
@@ -18,17 +54,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Features\Address\" />
-    <Folder Include="Features\Discount\" />
-    <Folder Include="Features\Notification\" />
-    <Folder Include="Features\ProductColor\" />
-    <Folder Include="Features\ProductImage\" />
-    <Folder Include="Features\ProductOption\" />
-    <Folder Include="Features\ProductTag\" />
-    <Folder Include="Features\Supplier\" />
-    <Folder Include="Features\Supply\" />
-    <Folder Include="Features\Tag\" />
-    <Folder Include="Features\WishListItem\" />
     <Folder Include="Features\Wishlist\Commands\CreateWishListCommand\" />
     <Folder Include="Features\Wishlist\Commands\DeleteWishListCommand\" />
     <Folder Include="Features\Wishlist\Commands\UpdateWishListCommand\" />
