--- a/src/MLS.MatLidStoreUI/package.json
+++ b/src/MLS.MatLidStoreUI/package.json
@@ -36,6 +36,7 @@
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -45,8 +46,10 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.4.45",
     "prettier": "3.3.3",
     "prettier-eslint": "^16.3.0",
+    "tailwindcss": "^3.4.10",
     "typescript": "~5.1.3"
   }
 }
