--- a/src/MLS.MatLidStoreUI/package.json
+++ b/src/MLS.MatLidStoreUI/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mls.mat-lid-store-ui",
+  "name": "matlidstore-ui",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -20,6 +20,10 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.2",
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.3",
+    "font-awesome": "^4.7.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -33,6 +37,7 @@
     "@angular-eslint/template-parser": "16.3.1",
     "@angular/cli": "^16.2.15",
     "@angular/compiler-cli": "^16.2.0",
+    "@angular/localize": "^16.2.0",
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
