--- a/src/MLS.MatLidStoreUI/package.json
+++ b/src/MLS.MatLidStoreUI/package.json
@@ -24,6 +24,7 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
+    "ngx-bootstrap": "^11.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -56,5 +57,13 @@
     "prettier-eslint": "^16.3.0",
     "tailwindcss": "^3.4.11",
     "typescript": "~5.1.3"
+  },
+  "overrides": {
+    "ngx-bootstrap": {
+      "@angular/common": "$@angular/common",
+      "@angular/core": "$@angular/core",
+      "@angular/animations": "$@angular/animations",
+      "@angular/forms": "$@angular/forms"
+    }
   }
 }
