Enable SSL and update project structure
- Updated .gitignore to exclude src/app/core/ssl directory.
- Added src/app/modules/ folder to MLS.MatLidStoreUI.esproj.
- Modified angular.json to enable SSL for the dev server.

--- a/src/MLS.MatLidStoreUI/angular.json
+++ b/src/MLS.MatLidStoreUI/angular.json
@@ -60,6 +60,11 @@
           "defaultConfiguration": "production"
         },
         "serve": {
+          "options": {
+            "ssl": true,
+            "sslKey": "src/app/core/ssl/matlidstorecer-decrypted.key",
+            "sslCert": "src/app/core/ssl/matlidstorecer.crt"
+          },
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
