--- a/.gitignore
+++ b/.gitignore
@@ -361,7 +361,4 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
-/src/MLS.Api/MatLidStoreDatabaseContext.dgml
-/src/MLS.Api/MatLidStoreDatabaseContext.dgml
-/src/MLS.Api/appsettings.Development.json
-/src/MLS.Api/appsettings.Development.json
+/src/MLS.MatLidStoreUI/src/app/core/ssl
