Update Angular, rename directories, and enhance AuthService
Updated Angular version in README.md from 14 to 16 and renamed frontend directory to `MLS.MatLidStoreUI`. Updated URL in README.md to reflect `MATLIDSTORE`. Enhanced security by updating JWT key in `appsettings.Development.json` to a more complex string. Removed unnecessary DTO imports in `AuthResponse.cs` and `AuthService.cs`. Simplified `AuthResponse` class and `Login` method in `AuthService.cs`. Added JWT key length check and improved exception messages. Added new mapping in `UserProfile.cs` for `AppUser` to `AuthResponse`.

--- a/src/MLS.Api/appsettings.Development.json
+++ b/src/MLS.Api/appsettings.Development.json
@@ -16,10 +16,9 @@
     "FromName": "Admin MatLidStore System"
   },
   "JwtSettings": {
-    "Key": "3kJhN+q1Y6w1JQwfjWf5sFZ2+LhB9X9OeDKLa5dqIMw=",
+    "Key": "rQ%Hm85p&G%khZxD$9&hP7DrBVFEwe-+&i$2~cNtYz~3dbr^qLxmJL4-NAQ5&h1q3~RY",
     "Issuer": "MatLidStore management API",
     "Audience": "MatLidStore management user",
     "DurationInHours": 2
-  },
-  "TokenKey": "This is a notice about the hard to guess security key by MatLidStore."
+  }
 }
