--- a/src/MLS.MatLidStoreUI/package.json
+++ b/src/MLS.MatLidStoreUI/package.json
@@ -24,6 +24,7 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
+    "jwt-decode": "^3.1.2",
     "ngx-bootstrap": "^11.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
