--- a/src/MLS.MatLidStoreUI/.prettierrc
+++ b/src/MLS.MatLidStoreUI/.prettierrc
@@ -8,5 +8,6 @@
   "trailingComma": "es5",
   "bracketSameLine": true,
   "printWidth": 120,
-  "endOfLine": "auto"
+  "endOfLine": "auto",
+  "plugins": ["prettier-plugin-organize-imports"]
 }
