--- a/src/MLS.MatLidStoreUI/package.json
+++ b/src/MLS.MatLidStoreUI/package.json
@@ -56,6 +56,7 @@
     "postcss": "^8.4.45",
     "prettier": "3.3.3",
     "prettier-eslint": "^16.3.0",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "tailwindcss": "^3.4.11",
     "typescript": "~5.1.3"
   },
