--- a/src/MLS.Api/appsettings.Development.json
+++ b/src/MLS.Api/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MatLidOracleDBConnectionString": "Data Source=localhost:1521/matlidstore.dev;User Id=system;Password=Matliddev2024@",
+    "MatLidOracleDBConnectionString": "Data Source=localhost:1521/matliddevdb.net;User Id=system;Password=Matliddev2024@",
     "MatLidSqlServerDBConnectionString": "Data Source=.;Initial Catalog=MatLidStoreIdentityDB;Integrated Security=True;Trust Server Certificate=True"
   },
   "EmailSettings": {
