--- a/src/MLS.MatLidStoreUI/package.json
+++ b/src/MLS.MatLidStoreUI/package.json
@@ -26,6 +26,7 @@
     "font-awesome": "^4.7.0",
     "jwt-decode": "^3.1.2",
     "ngx-bootstrap": "^11.0.2",
+    "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
