Update ESLint, Prettier, and Angular configurations
- **.eslintrc.json**: Added new plugins and rules, removed outdated ones.
- **pre-commit**: Added a script to run `npx lint-staged`.
- **.prettierignore**: Updated ignore list.
- **.prettierrc**: Changed `singleQuote` to `false`, added TailwindCSS plugin.
- **launch.json**: Switched browser from `msedge` to `chrome`.
- **tasks.json**: Updated `problemMatcher` patterns, removed specific tasks.
- **LICENSE**: Added MIT License for 2024.
- **angular.json**: Renamed project, updated configurations.
- Added FontAwesome dependencies, removed `font-awesome` and `ngx-bootstrap`.
- Updated `package.json` scripts and dependencies.
- Added `postcss.config.js` for TailwindCSS and Autoprefixer.
- Updated routing and module configurations in various files.
- Simplified several component templates and TypeScript files.
- Ensured Node.js compatibility and updated Babel packages.
- Deleted old environment files and updated `index.html`.
- Updated `styles.scss` and `tailwind.config.js`.

--- a/src/MLS.MatLidStoreUI/.prettierignore
+++ b/src/MLS.MatLidStoreUI/.prettierignore
@@ -1,20 +1,21 @@
 # Ignore artifacts:
 build
 coverage
+package.json
+package-lock.json
+yarn.lock
 
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # Compiled output
 /dist
+/dist-server
 /tmp
 /out-tsc
 /bazel-out
 
 # Node
 /node_modules
-npm-debug.log
-yarn-error.log
-
 # IDEs and editors
 .idea/
 .project
@@ -38,9 +39,12 @@ yarn-error.log
 /connect.lock
 /coverage
 /libpeerconnection.log
+npm-debug.log
+yarn-error.log
 testem.log
 /typings
-
 # System files
 .DS_Store
 Thumbs.db
+# Application
+index.html
