--- a/src/MLS.MatLidStoreUI/.eslintrc.json
+++ b/src/MLS.MatLidStoreUI/.eslintrc.json
@@ -1,6 +1,7 @@
 {
-  "root": true,
   "ignorePatterns": ["projects/**/*"],
+  "root": true,
+  "plugins": ["unused-imports", "simple-import-sort"],
   "overrides": [
     {
       "files": ["*.ts"],
@@ -8,37 +9,38 @@
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
         "plugin:@angular-eslint/recommended",
-        "plugin:@angular-eslint/template/process-inline-templates",
         "plugin:prettier/recommended"
       ],
       "rules": {
-        "@angular-eslint/directive-selector": [
-          "error",
-          {
-            "type": "attribute",
-            "prefix": "app",
-            "style": "camelCase"
-          }
-        ],
-        "@angular-eslint/component-selector": [
-          "error",
-          {
-            "type": "element",
-            "prefix": "app",
-            "style": "kebab-case"
-          }
-        ]
+        "@angular-eslint/sort-ngmodule-metadata-arrays": ["error", {}],
+        "quotes": ["error", "single"],
+        "simple-import-sort/exports": "error",
+        "simple-import-sort/imports": "error",
+        "unused-imports/no-unused-imports": "error"
       }
     },
     {
       "files": ["*.html"],
-      "excludedFiles": ["*inline-template-*.component.html"],
       "extends": [
         "plugin:@angular-eslint/template/recommended",
         "plugin:@angular-eslint/template/accessibility",
         "plugin:prettier/recommended"
       ],
       "rules": {
+        "@angular-eslint/template/attributes-order": [
+          "error",
+          {
+            "alphabetical": false,
+            "order": [
+              "STRUCTURAL_DIRECTIVE", // e.g. `*ngIf="true"`, `*ngFor="let item of items"`
+              "TEMPLATE_REFERENCE", // e.g. `<input #inputRef>`
+              "ATTRIBUTE_BINDING", // e.g. `<input required>`, `id="3"`
+              "INPUT_BINDING", // e.g. `[id]="3"`, `[attr.colspan]="colspan"`, [style.width.%]="100", [@triggerName]="expression", `bind-id="handleChange()"`
+              "TWO_WAY_BINDING", // e.g. `[(id)]="id"`, `bindon-id="id"
+              "OUTPUT_BINDING" // e.g. `(idChange)="handleChange()"`, `on-id="handleChange()"`
+            ]
+          }
+        ],
         "prettier/prettier": [
           "error",
           {
