--- a/src/MLS.MatLidStoreUI/.vscode/launch.json
+++ b/src/MLS.MatLidStoreUI/.vscode/launch.json
@@ -4,17 +4,17 @@
   "configurations": [
     {
       "name": "ng serve",
-      "type": "msedge",
+      "type": "chrome",
       "request": "launch",
       "preLaunchTask": "npm: start",
-      "url": "https://localhost:4200/"
+      "url": "http://localhost:4200/"
     },
     {
       "name": "ng test",
       "type": "chrome",
       "request": "launch",
       "preLaunchTask": "npm: test",
-      "url": "https://localhost:9876/debug.html"
+      "url": "http://localhost:9876/debug.html"
     }
   ]
 }
