--- a/src/MLS.MatLidStoreUI/.vscode/tasks.json
+++ b/src/MLS.MatLidStoreUI/.vscode/tasks.json
@@ -1,39 +1,42 @@
 {
+  // For more information, visit: https://go.microsoft.com/fwlink/?LinkId=733558
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "npm: start",
       "type": "npm",
       "script": "start",
       "isBackground": true,
-      "problemMatcher": [
-        {
-          "owner": "typescript",
-          "pattern": "$tsc",
-          "background": {
-            "activeOnStart": true,
-            "beginsPattern": "Compiling",
-            "endsPattern": "Angular Live Development Server is listening on"
+      "problemMatcher": {
+        "owner": "typescript",
+        "pattern": "$tsc",
+        "background": {
+          "activeOnStart": true,
+          "beginsPattern": {
+            "regexp": "(.*?)"
+          },
+          "endsPattern": {
+            "regexp": "bundle generation complete"
           }
         }
-      ]
+      }
     },
     {
-      "label": "npm: test",
       "type": "npm",
       "script": "test",
       "isBackground": true,
-      "problemMatcher": [
-        {
-          "owner": "typescript",
-          "pattern": "$tsc",
-          "background": {
-            "activeOnStart": true,
-            "beginsPattern": "Compiling",
-            "endsPattern": "Executed .* specs"
+      "problemMatcher": {
+        "owner": "typescript",
+        "pattern": "$tsc",
+        "background": {
+          "activeOnStart": true,
+          "beginsPattern": {
+            "regexp": "(.*?)"
+          },
+          "endsPattern": {
+            "regexp": "bundle generation complete"
           }
         }
-      ]
+      }
     }
   ]
 }
