--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,7 +1,7 @@
-# This workflow will build a .NET project
+﻿# This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: .NET
+name: Full Solution CI
 
 on:
   push:
@@ -10,19 +10,46 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build:
-
+  backend:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
+
     - name: Restore dependencies
       run: dotnet restore
-    - name: Build
+
+    - name: Build Backend
       run: dotnet build --no-restore
-    - name: Test
+
+    - name: Test Backend
       run: dotnet test --no-build --verbosity normal
+
+  frontend:
+    runs-on: ubuntu-latest
+    needs: backend # Chạy frontend sau khi backend hoàn tất
+
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18.17.0'
+
+    - name: Install dependencies
+      run: npm install
+      working-directory: ./src/MLS.MatLidStoreUI
+
+    - name: Build Angular application
+      run: npm run build
+      working-directory: ./src/MLS.MatLidStoreUI
+
+    - name: Test Angular application
+      run: npm run test -- --watch=false
+      working-directory: ./src/MLS.MatLidStoreUI
